# shockwave-slicer

./: .gitignore  AGENTS.md  Makefile  README.md
docs/: avoiding-thin-layers-2026-05-11.md  field-smoothness-2026-05-11.md  path-geometry-quality-2026-05-12.md  slicer-gui-design-2026-05-14.md
field-gen/: Cargo.toml  default-settings.json  generate_kernel.py  generate_test_images.py  generate_trapezoid_sdf_kernel.py  generate_truncated_cone_kernel.py  kernel_to_bmp.py
field-gen/crates/field-gen-cli/: Cargo.toml  README.md
field-gen/crates/field-gen-cli/src/: cli.rs  main.rs
field-gen/crates/shockwave-clip/: Cargo.toml  README.md
field-gen/crates/shockwave-clip/src/: aabb.rs  classify.rs  intersect.rs  lib.rs
field-gen/crates/shockwave-config/: Cargo.toml  README.md
field-gen/crates/shockwave-config/src/: lib.rs  tests.rs
field-gen/crates/shockwave-core/: Cargo.toml
field-gen/crates/shockwave-core/src/: geometry.rs  grid.rs
field-gen/crates/shockwave-gcode/: Cargo.toml  README.md
field-gen/crates/shockwave-gcode/src/: lib.rs
field-gen/crates/shockwave-geodesic/: Cargo.toml  README.md
field-gen/crates/shockwave-geodesic/src/: lib.rs
field-gen/crates/shockwave-gui/: Cargo.toml  README.md
field-gen/crates/shockwave-gui-render/: Cargo.toml  README.md
field-gen/crates/shockwave-gui-render/src/: common.rs  geometry.rs  lib.rs  mesh_pipeline.rs  scene.rs  scene_renderer.rs  toolpath_pipeline.rs
field-gen/crates/shockwave-gui-render/src/shaders/: toolpath_preview.wgsl
field-gen/crates/shockwave-gui/src/: app.rs  gpu_common.rs  gpu_mesh_pipeline.rs  gpu_preview.rs  gpu_scene_preview.rs  gpu_toolpath_preview.rs  main.rs  preview_canvas.rs  settings_form.rs
field-gen/crates/shockwave-iso/: Cargo.toml  README.md
field-gen/crates/shockwave-iso/src/: interpolate.rs  lib.rs  mesh.rs  surface_nets.rs
field-gen/crates/shockwave-math/: Cargo.toml  README.md
field-gen/crates/shockwave-math/src/: grid.rs
field-gen/crates/shockwave-mesh/: Cargo.toml  README.md
field-gen/crates/shockwave-mesh/src/: lib.rs
field-gen/crates/shockwave-output/: Cargo.toml  README.md
field-gen/crates/shockwave-output/src/: lib.rs
field-gen/crates/shockwave-path/: Cargo.toml  README.md
field-gen/crates/shockwave-path/src/: lib.rs
field-gen/crates/shockwave-slicer/: Cargo.toml  README.md
field-gen/crates/shockwave-slicer-io/: Cargo.toml  README.md
field-gen/crates/shockwave-slicer-io/src/: config.rs  job.rs  lib.rs
field-gen/crates/shockwave-slicer/src/: error.rs  field.rs  gcode.rs  layers.rs  lib.rs  pipeline.rs  progress.rs  settings.rs
field-gen/crates/shockwave-stl/: Cargo.toml  README.md
field-gen/crates/shockwave-stl/src/: lib.rs
field-gen/crates/shockwave-voxel/: Cargo.toml  README.md
field-gen/crates/shockwave-voxel/src/: field.rs  lib.rs  voxelize.rs
field-gen/src/: cli.rs  field.rs  geometry.rs  grid.rs  main.rs  output.rs  stl.rs  voxelize.rs
field-viewer/: app.js  index.html  styles.css
field-viewer/js/: atlas-view.js  image-model.js  main.js  state.js  volume-view.js
field-viewer/shaders/: volume-fragment.glsl  volume-vertex.glsl
gcode-viewer/: DESIGN_DECISIONS.md  index.html  styles.css
gcode-viewer/js/: gcode-parser.js  viewer.js
inputs/: 20mmPillar.stl  Unreachable.stl  ellipsoid-kernel.json  ellipsoid-kernel.metadata.json  field_tester.stl  reachability.stl  snapmaker-a350.json  suzanne.stl  trapezoid-kernel.json  trapezoid-kernel.metadata.json  truncated-cone-kernel.json  truncated-cone-kernel.metadata.json
tickets/done/: 001-rename-core-to-math.md  004-extract-pure-slicer-pipeline.md  005-add-slicer-io-and-refactor-cli.md  006-parameterize-gcode-material-settings.md  010-extract-shared-slice-job-driver.md  016-add-iced-gui-window.md  017-load-and-save-gui-settings.md  021-add-iced-canvas-test-triangle.md  024-spike-gpu-rendered-preview-triangle.md
tickets/not-ready/: 007-add-scene-tree-when-gui-needs-scene-state.md  008-add-render-test-triangle-for-iced.md  009-add-iced-gui-v0-shell.md
tickets/todo/: 001-rename-core-to-math.md  002-add-gcode-regression-before-refactor.md  003-add-shockwave-config-settings.md  011-add-single-slice-job-api.md  012-move-kernel-json-loading-out-of-cli.md  013-make-all-slice-outputs-atomic.md  014-improve-progress-and-cancellation-granularity.md  015-add-settings-schema-metadata-for-clients.md  018-add-gui-file-and-output-selection.md  019-wire-gui-slicing-progress-and-cancel.md  020-expose-basic-gui-settings.md  022-preview-selected-stl-on-print-bed.md  023-preview-generated-gcode-or-toolpaths.md
