[workspace]
members = [
    "crates/field-gen-cli",
    "crates/shockwave-clip",
    "crates/shockwave-core",
    "crates/shockwave-gcode",
    "crates/shockwave-geodesic",
    "crates/shockwave-iso",
    "crates/shockwave-mesh",
    "crates/shockwave-output",
    "crates/shockwave-path",
    "crates/shockwave-stl",
    "crates/shockwave-voxel",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
