[workspace]
members = [
    "crates/field-gen-cli",
    "crates/shockwave-clip",
    "crates/shockwave-config",
    "crates/shockwave-gui",
    "crates/shockwave-math",
    "crates/shockwave-gcode",
    "crates/shockwave-geodesic",
    "crates/shockwave-iso",
    "crates/shockwave-mesh",
    "crates/shockwave-output",
    "crates/shockwave-path",
    "crates/shockwave-slicer",
    "crates/shockwave-slicer-io",
    "crates/shockwave-stl",
    "crates/shockwave-voxel",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
