[package]
name = "field-gen"
version.workspace = true
edition.workspace = true

[dependencies]
rayon = "1.10"
serde_json = "1.0"
shockwave-clip = { path = "../shockwave-clip" }
shockwave-math = { path = "../shockwave-math" }
shockwave-gcode = { path = "../shockwave-gcode" }
shockwave-iso = { path = "../shockwave-iso" }
shockwave-output = { path = "../shockwave-output" }
shockwave-path = { path = "../shockwave-path" }
shockwave-stl = { path = "../shockwave-stl" }
shockwave-voxel = { path = "../shockwave-voxel" }
