[package]
name = "field-gen"
version.workspace = true
edition.workspace = true

[dependencies]
rayon = "1.10"
serde_json = "1.0"
shockwave-clip = { path = "../shockwave-clip" }
shockwave-config = { path = "../shockwave-config" }
shockwave-math = { path = "../shockwave-math" }
shockwave-gcode = { path = "../shockwave-gcode" }
shockwave-iso = { path = "../shockwave-iso" }
shockwave-output = { path = "../shockwave-output" }
shockwave-path = { path = "../shockwave-path" }
shockwave-slicer = { path = "../shockwave-slicer" }
shockwave-slicer-io = { path = "../shockwave-slicer-io" }
shockwave-voxel = { path = "../shockwave-voxel" }
