[package]
name = "shockwave-gui"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "tokio"] }
rfd = "0.17.2"
shockwave-config = { path = "../shockwave-config" }
shockwave-math = { path = "../shockwave-math" }
shockwave-slicer = { path = "../shockwave-slicer" }
shockwave-slicer-io = { path = "../shockwave-slicer-io" }
