[package]
name = "shockwave-gui"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.14.0", features = ["advanced", "tokio"] }
iced_wgpu = "0.14.0"
rfd = "0.17.2"
shockwave-config = { path = "../shockwave-config" }
shockwave-gui-render = { path = "../shockwave-gui-render" }
shockwave-mesh = { path = "../shockwave-mesh" }
shockwave-path = { path = "../shockwave-path" }
shockwave-slicer = { path = "../shockwave-slicer" }
shockwave-slicer-io = { path = "../shockwave-slicer-io" }
