[package]
name = "shockwave-output"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shockwave-math = { path = "../shockwave-math" }
shockwave-iso = { path = "../shockwave-iso" }
shockwave-voxel = { path = "../shockwave-voxel" }
