[package]
name = "shockwave-slicer"
version.workspace = true
edition.workspace = true

[dependencies]
rayon = "1.10"
shockwave-clip = { path = "../shockwave-clip" }
shockwave-config = { path = "../shockwave-config" }
shockwave-gcode = { path = "../shockwave-gcode" }
shockwave-iso = { path = "../shockwave-iso" }
shockwave-math = { path = "../shockwave-math" }
shockwave-path = { path = "../shockwave-path" }
shockwave-voxel = { path = "../shockwave-voxel" }
